# martillo

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml
.github/workflows/: ci.yaml  coverage.yaml  grcov.yml
src/: apply.rs  cli.rs  constants.rs  main.rs  parse.rs  types.rs
testdata/invalid3/: mappings.toml
testdata/valid2/: mappings.toml
testdata/valid3/: mappings.toml
