[package]
name = "martillo"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas R. Smith"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.4"
